--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 <h1>Виды браузеров</h1>
+    <ul>
+        <li>
+            <a href="auth.html">Вход в личный кабинет</a>
+        </li>
+        <li>
+            <a href="registration.html">Регистрация</a>
+        </li>
+    </ul>
 <p> В таблице перечислены основные браузеры и их движки для отрисовки содержимого и исполнения Javascript</p>
 <br/>
 <table border="1">
@@ -46,5 +54,6 @@
 </table>
 <br/>
 <a href="https://ru.wikipedia.org/wiki/Браузер">Больше информации на сайте Wiki</a>
+
 </body>
 </html>
