update auth.html, index.html registration.html, resetPass.html

--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Виды браузеров</title>
+    <link rel="stylesheet" type="text/css" href="src/style.css"/>
 </head>
 <body>
 <h1>Виды браузеров</h1>
     <ul>
         <li>
-            <a href="auth.html">Вход в личный кабинет</a>
+            <a class="links" href="auth.html">Вход в личный кабинет</a>
         </li>
         <li>
-            <a href="registration.html">Регистрация</a>
+            <a class="links" href="registration.html">Регистрация</a>
         </li>
     </ul>
 <p> В таблице перечислены основные браузеры и их движки для отрисовки содержимого и исполнения Javascript</p>
 <br/>
-<table border="1">
+<table border="2">
     <thead>
     <tr>
         <th>Движок</th>
@@ -53,7 +54,7 @@
     </tbody>
 </table>
 <br/>
-<a href="https://ru.wikipedia.org/wiki/Браузер">Больше информации на сайте Wiki</a>
+<a class="links" href="https://ru.wikipedia.org/wiki/Браузер">Больше информации на сайте Wiki</a>
 
 </body>
 </html>
