--- a/resetPass.html
+++ b/resetPass.html
@@ -2,16 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Сброс пароля</title>
+    <link rel="stylesheet" type="text/css" href="src/style.css"/>
 </head>
 <body>
 <h2>Введите ваш логин и адрес электронной почты</h2>
 <form action="./handler.php" method="post">
-    <p></p><label for="login">Логин</label><br>
-    <p></p><input type="text" name="login" id="login"><br>
-    <p></p><label for="email">Email</label>
-    <p></p><input type="text" name="email" id="email"><br>
-    <p></p><button type="submit">Отправить</button>
+    <p></p><label>
+    Логин
+    <input class="text" type="text" name="login"></label><br>
+
+    <p></p><label>
+    Email
+    <input class="text" type="text" name="email"></label><br>
+    <p></p>
+    <button class="buttons" type="submit">Отправить</button>
 </form>
 </body>
 </html>
