replace to src auth.html, index.html registration.html, resetPass.html

--- a/src/auth.html
+++ b/src/auth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход в ЛК</title>
-    <link rel="stylesheet" type="text/css" href="src/style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 <h2>Введите данные учетной записи</h2>
