--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Виды браузеров</title>
-    <link rel="stylesheet" type="text/css" href="src/style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 <h1>Виды браузеров</h1>
