--- a/src/registration.html
+++ b/src/registration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Форма регистрации</title>
-    <link rel="stylesheet" type="text/css" href="src/style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 <h2>Заполните поля формы авторизации</h2>
