--- a/src/resetPass.html
+++ b/src/resetPass.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Сброс пароля</title>
-    <link rel="stylesheet" type="text/css" href="src/style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 <h2>Введите ваш логин и адрес электронной почты</h2>
